Update Skin Effect Response For an Analytic Fermi Surface.ipynb
Fixed markdown for figure options.

--- a/notebooks/Skin Effect Response For an Analytic Fermi Surface.ipynb
+++ b/notebooks/Skin Effect Response For an Analytic Fermi Surface.ipynb
@@ -86,7 +86,7 @@
    "metadata": {},
    "source": [
     "## Figure options\n",
-    "Options for figures, to include extra information for processing and analysis, or not including it for final quality (eg. for thesis)."
+    "Options for figures, such as format, and whether or not to save them (for testing)."
    ]
   },
   {
